--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-md-9">
                    <div class="card-body">
-                       <h5 class="card-title"><a href="#" style="color: MidnightBlue;text-decoration:none;">Nome do Sistema (aplicativo 12)</a></h5>
+                       <h5 class="card-title"><a href="{% url 'index_locaimoveis'%}" style="color: MidnightBlue;text-decoration:none;">Nome do Sistema (aplicativo 12)</a></h5>
                        <p class="card-text">Descrição do Sistema (aplicativo 12)</p>
                    </div>
                 </div>
