alterando a página index do applocaimoveis

--- a/applocaimoveis/templates/applocaimoveis/index_applocaimoveis.html
+++ b/applocaimoveis/templates/applocaimoveis/index_applocaimoveis.html
@@ -6,5 +6,5 @@
 
 {% block content %}
 <!-- Conteúdo específico da página será inserido aqui -->
-  Conteúdo da minha pagina
+  Conteúdo da minha página da aplicação applocaimoveis
 {% endblock %}
