Criação do app de gestão de projetos, equipe 3.

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -37,8 +37,8 @@
                 </div>
                 <div class="col-md-9">
                    <div class="card-body">
-                       <h5 class="card-title"><a href="#" style="color: MidnightBlue;text-decoration:none;">Nome do Sistema (aplicativo 03)</a></h5>
-                       <p class="card-text">Descrição do Sistema (aplicativo 03)</p>
+                       <h5 class="card-title"><a href="{%url 'index_app_gestao_proj'%}" style="color: MidnightBlue;text-decoration:none;">Sistema de Gestão de Projetos</a></h5>
+                       <p class="card-text">Para organizar tarefas, equipes e progresso dos projetos.</p>
                    </div>
                 </div>
            </div>
