--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
     {% block menu %}
-       
+        {% include '_menu.html'%}
     {% endblock %}
     
     <!-- Conteúdo Principal -->
