--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -67,8 +67,8 @@
                 </div>
                 <div class="col-md-9">
                    <div class="card-body">
-                       <h5 class="card-title"><a href="#" style="color: MidnightBlue;text-decoration:none;">Nome do Sistema (aplicativo 05)</a></h5>
-                       <p class="card-text">Descrição do Sistema (aplicativo 05)</p>
+                       <h5 class="card-title"><a href="{%url 'controle_academico'%}" style="color: MidnightBlue;text-decoration:none;">Sistema de Controle Acadêmico (aplicativo 05)</a></h5>
+                       <p class="card-text">controle acadêmico para gerenciar as informações de notas e frequência dos alunos.</p>
                    </div>
                 </div>
            </div>
