--- a/app_controle_academico/templates/app_controle_academico/index_controle_academico.html
+++ b/app_controle_academico/templates/app_controle_academico/index_controle_academico.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Sistema de Controle Academico 
+    </title>
+</head>
+<body>
+    
+</body>
+</html>
