criação do app de cadastro de membros do projeto

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-9">
                    <div class="card-body">
-                       <h5 class="card-title"><a href="{%url 'index_app_gestao_proj'%}" style="color: MidnightBlue;text-decoration:none;">Sistema de Gestão de Projetos</a></h5>
+                       <h5 class="card-title"><a href="{%url 'base_app_gestao'%}" style="color: MidnightBlue;text-decoration:none;">Sistema de Gestão de Projetos</a></h5>
                        <p class="card-text">Para organizar tarefas, equipes e progresso dos projetos.</p>
                    </div>
                 </div>
