atualização do sistema de renovação de cadastro, equipe 4

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -52,8 +52,8 @@
                 </div>
                 <div class="col-md-9">
                    <div class="card-body">
-                       <h5 class="card-title"><a href="#" style="color: MidnightBlue;text-decoration:none;">Nome do Sistema (aplicativo 04)</a></h5>
-                       <p class="card-text">Descrição do Sistema (aplicativo 04)</p>
+                       <h5 class="card-title"><a href="{%url 'index_reuniao'%}" style="color: MidnightBlue;text-decoration:none;">Sistema de reserva de Salas de Reunião(aplicativo 04)</a></h5>
+                       <p class="card-text">e os funcionários de uma empresa podem reservar salas de reunião. (aplicativo 04)</p>
                    </div>
                 </div>
            </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-9">
                    <div class="card-body">
-                       <h5 class="card-title"><a href="{%url 'controle_academico'%}" style="color: MidnightBlue;text-decoration:none;">Sistema de Controle Acadêmico (aplicativo 05)</a></h5>
+                       <h5 class="card-title"><a href="#" style="color: MidnightBlue;text-decoration:none;">Sistema de Controle Acadêmico (aplicativo 05)</a></h5>
                        <p class="card-text">controle acadêmico para gerenciar as informações de notas e frequência dos alunos.</p>
                    </div>
                 </div>
