--- a/app_gestao_proj/templates/app_gestao_proj/index_app_gestao_proj.html
+++ b/app_gestao_proj/templates/app_gestao_proj/index_app_gestao_proj.html
@@ -15,9 +15,9 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="{% url 'cadastrar_membros' %}">Membros</a></li>
-            <li><a class="dropdown-item" href="{% url '' %}">Projetos</a></li>
-            <li><a class="dropdown-item" href="{% url '' %}">Equipes</a></li>
-            <li><a class="dropdown-item" href="{% url '' %}">Tarefas</a></li>
+            <li><a class="dropdown-item" href="{% url 'criar_projetos'%}">Projetos</a></li>
+            <li><a class="dropdown-item" href="{% url 'criar_equipes'%}">Equipes</a></li>
+            <li><a class="dropdown-item" href="{% url 'criar_tarefas'%}">Tarefas</a></li>
 
           </ul>
         </li>
