--- a/app_gestao_proj/templates/app_gestao_proj/base_app_gestao.html
+++ b/app_gestao_proj/templates/app_gestao_proj/base_app_gestao.html
@@ -7,6 +7,8 @@
     <title>{% block title %}Sistema de Gestão{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0/css/select2.min.css" rel="stylesheet" />
+    
     <style>
         /* Faz a página ocupar 100% da altura da tela */
         html, body {
@@ -40,12 +42,12 @@
         {% include 'app_gestao_proj/index_app_gestao_proj.html' %}
     {% endblock menu %} 
     
-    
     <div class="container mt-5">
         {% block content %}
         {% endblock content %}
     </div>
     
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0/js/select2.min.js"></script>
 </body>
 </html>
