--- a/app_gestao_proj/templates/app_gestao_proj/forms_equipe.html
+++ b/app_gestao_proj/templates/app_gestao_proj/forms_equipe.html
@@ -1,6 +1,6 @@
 {% extends 'app_gestao_proj/base_app_gestao.html' %}
 
-{% block title %} Cadastro de membros {% endblock %}
+{% block title %} Cadastro de Equipes {% endblock %}
 
 {% block content %}
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -19,37 +19,31 @@
 
     <div class="card">
         <div class="card-header">
-            Cadastrar Membros
+            Cadastrar Equipes
         </div>
         <div class="card-body">
             <form method="POST"
-            action="{% if membro.id %} 
-                         {% url 'editar_membros' membro.id %}
+            action="{% if equipe.id %} 
+                         {% url 'editar_equipes' equipe.id %}
                     {% else %}
-                         {% url 'cadastrar_membros' %}
+                         {% url 'criar_equipes' %}
                     {% endif %}">
                 {% csrf_token %}
                 <div class="mb-3">
-                    {{ form.nome_membro.label_tag }}
-                    {{ form.nome_membro }}
+                    {{ form.nome_equipe.label_tag }}
+                    {{ form.nome_equipe }}
                 </div>
                 <div class="mb-3">
-                    {{ form.funcao.label_tag }}
-                    {{ form.funcao }}
+                    {{ form.membros_equipe.label_tag }}
+                    {{ form.membros_equipe }}
+                    
                 </div>
                 <div class="mb-3">
-                    {{ form.email.label_tag }}
-                    {{ form.email }}
+                    {{ form.descricao.label_tag }}
+                    {{ form.descricao }}
                 </div>
-                <div class="mb-3">
-                    {{ form.telefone.label_tag }}
-                    {{ form.telefone }}
-                </div>
-                <div class="mb-3">
-                    {{ form.equipe.label_tag }}
-                    {{ form.equipe }}
-                </div>
-                <input type="hidden" id="{{membro.id}}">
+                
+                <input type="hidden" id="{{equipe.id}}">
                 <button type="submit" class="btn btn-primary">Salvar</button>    
             </form>
         </div>
@@ -57,30 +51,32 @@
 
     <div class="card"></div>
         <div class="card-header">
-            Lista de membros
+            Lista de Equipes
         </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
-                            <td>Nome</td>
-                            <td>Função</td>
-                            <td>E-mail</td>
-                            <td>Telefone</td>
+                            <td>#id</td>
                             <td>Equipe</td>
+                            <td>Membros</td>
+                            <td>Descrição</td>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for i in lista_membros %}
+                        {% for i in lista_equipes %}
                         <tr>
-                            <td>{{i.nome_membro}}</td>
-                            <td>{{i.funcao}}</td>
-                            <td>{{i.email}}</td>
-                            <td>{{i.telefone}}</td>
-                            <td>{{i.equipe}}</td>
-                            <td><a href="{% url 'editar_membros' i.id %}"  class="btn btn-primary">Alterar</a></td>
-                                <td><a href="{% url 'excluir_membros' i.id %}" class="btn btn-primary" onclick="confirmDelete(event, this);">Excluir</a></td>
+                            <td>{{i.id}}</td>
+                            <td>{{i.nome_equipe}}</td>
+                            <td>
+                                {% for membro in i.membros_equipe.all %}
+                                    {{ membro }}{% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                            </td>
+                            <td>{{i.descricao}}</td>
+                            <td><a href="{% url 'editar_equipes' i.id %}"  class="btn btn-primary">Alterar</a></td>
+                                <td><a href="{% url 'excluir_equipes' i.id %}" class="btn btn-primary" onclick="confirmDelete(event, this);">Excluir</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
