--- a/app_salas_reuniao/templates/app_salas_reuniao/cadastrar_funcionario.html
+++ b/app_salas_reuniao/templates/app_salas_reuniao/cadastrar_funcionario.html
@@ -1,64 +1,45 @@
-{%block menu %}
-    {%include 'app_salas_reuniao/_menu.html' %}
-{% endblock %}
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Funcionario</title>
-</head>
-<body>
-    <div class="container mt-5">
-        <h1>Cadastro de Funcionário</h1>
-        <form method="post">
+{% extends 'app_salas_reuniao/base_salas_reuniao.html' %}
+
+{% block content %}
+<div class="container-sm"></div>
+{%if messages %}
+<div>
+    {% for massage in messages %}
+        <div class="alert alert-{{massage.tags}} alert-dismissible fade show" role="alert">
+            {{massage}}
+            <button type="button" class="btn-close" data-bs-dismiss = "alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+</div>
+{% endif %}
+
+<div class="card mb-3" style="border: 1px solid #007bff;">
+    <div class="card-header bg-primary text-white">
+        Cadastrar Funcionario
+    </div>
+    <div class="card-body">
+        <form method="POST">
             {% csrf_token %}
-            <div class="form-group">
-                <label>{{ form.nome.label }}</label>
-                <input type="text" name="{{ form.nome.name }}" class="form-control" >
-                {% if form.nome.errors %}
-                    <div class="invalid-feedback">
-                        {{ form.nome}}
-                    </div>
-                {% endif %}
+            <div class="mb-3">
+                {{ form.nome.label_tag }}
+                {{ form.nome }}
             </div>
-            <br>
-            <div class="form-group">
-                <label for="{{ form.CPF.id_for_label }}">{{ form.CPF.label }}</label>
-                <input type="text" name="{{ form.CPF.name }}" id="{{ form.CPF.id_for_label }}" class="form-control" value="{{ form.CPF.value|default_if_none:'' }}">
-                {% if form.CPF.errors %}
-                    <div class="invalid-feedback">
-                        {{ form.CPF}}
-                    </div>
-                {% endif %}
+            <div class="mb-3">
+                {{ form.CPF.label_tag }}
+                {{ form.CPF }}
+                
             </div>
-            <br>
-            <div class="form-group">
-                <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
-                <input type="email" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="form-control" value="{{ form.email.value|default_if_none:'' }}">
-                {% if form.email.errors %}
-                    <div class="invalid-feedback">
-                        {{ form.email}}
-                    </div>
-                {% endif %}
+            <div class="mb-3">
+                {{ form.email.label_tag }}
+                {{ form.email }}
             </div>
-            <br>
-            <div class="form-group">
-                <label for="{{ form.ramal.id_for_label }}">{{ form.ramal.label }}</label>
-                <input type="text" name="{{ form.ramal.name }}" id="{{ form.ramal.id_for_label }}" class="form-control" value="{{ form.ramal.value|default_if_none:'' }}">
-                {% if form.ramal.errors %}
-                    <div class="invalid-feedback">
-                        {{ form.ramal}}
-                    </div>
-                {% endif %}
+            <div class="mb-3">
+                {{ form.ramal.label_tag }}
+                {{ form.ramal }}
             </div>
-            <br>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
+
+            <button type="submit" class="btn btn-primary">Salvar</button>    
         </form>
     </div>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>     
+{% endblock %}
