--- a/app_gestao_proj/templates/app_gestao_proj/forms_projeto.html
+++ b/app_gestao_proj/templates/app_gestao_proj/forms_projeto.html
@@ -85,8 +85,8 @@
                             <td>{{i.nome_projeto}}</td>
                             <td>{{i.descricao}}</td>
                             <td>{{i.situacao}}</td>
-                            <td>{{i.data_inicio}}</td>
-                            <td>{{i.data_conclusao}}</td>
+                            <td>{{ i.data_inicio|date:"d/m/Y" }}</td>
+                            <td>{{ i.data_conclusao|date:"d/m/Y" }}</td>
                             <td><a href="{% url 'editar_projetos' i.id %}"  class="btn btn-primary">Alterar</a></td>
                                 <td><a href="{% url 'excluir_projetos' i.id %}" class="btn btn-primary" onclick="confirmDelete(event, this);">Excluir</a></td>
                         </tr>
