--- a/app_gestao_proj/templates/app_gestao_proj/base_app_gestao.html
+++ b/app_gestao_proj/templates/app_gestao_proj/base_app_gestao.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0/css/select2.min.css" rel="stylesheet" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     
     <style>
         /* Faz a página ocupar 100% da altura da tela */
@@ -42,12 +45,62 @@
         {% include 'app_gestao_proj/index_app_gestao_proj.html' %}
     {% endblock menu %} 
     
-    <div class="container mt-5">
-        {% block content %}
-        {% endblock content %}
-    </div>
+    {% block content %}
+        <div class="container mt-5">
+            <div class="row">
+                {% for projeto in projetos %}
+                
+                <div class="card-group">
+
+                        <div class="card border-dark mb-3" style="max-width: 18rem;">
+                            <div class="card-header text-bg-info mb-3">
+                                <h5 class="card-title">{{ projeto.nome_projeto }}</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"> {{ projeto.descricao }}</p>
+                                <p class="card-text">
+                                Tarefas: {{ projeto.tarefas_concluidas }}/{{ projeto.total_tarefas }}
+                                </p>
+                                <p class="card-text">
+                                    Equipe responsável: {{projeto.equipe_responsavel}}
+                                </p>
+
+                                <button type="button" class="btn btn-outline-dark" href="{% url 'listar_tarefas' %}">Listar Tarefas</button>
+                                
+                                <h6>Tarefas:</h6>
+                                
+                                <ul>
+                                    {% for tarefa in projeto.tarefa_set.all %}
+                                    <li>
+                                        <strong>{{ tarefa.nome_tarefa }}</strong> - 
+                                        Situação: {{ tarefa.get_situacao_display }}
+                                        <br>
+                                        Membros: 
+                                        {% if tarefa.membros_equipe.all %}
+                                            {{ tarefa.membros_equipe.all|join:", " }}
+                                        {% else %}
+                                            Nenhum membro associado.
+                                        {% endif %}
+                                    </li>
+                                    {% empty %}
+                                    <li>Não há tarefas para este projeto.</li>
+                                    {% endfor %}
+                                </ul>
+                                
+                            </div>
+                        
+                            <div class="progress" role="progressbar" aria-label="Warning" aria-valuenow="{{ projeto.progresso }}" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar bg-warning text-dark" style="width: {{projeto.progresso}}%;">
+                                    {{ projeto.progresso }}%
+                                </div>
+                            </div>
+                        </div>
+
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    {%endblock content%}
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0/js/select2.min.js"></script>
 </body>
 </html>
