--- a/app_gestao_proj/templates/app_gestao_proj/index_app_gestao_proj.html
+++ b/app_gestao_proj/templates/app_gestao_proj/index_app_gestao_proj.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Sistema de Gestão de Projetos</a>
+    <a class="navbar-brand" href="/app_gestao_proj/progresso_projetos">Sistema de Gestão de Projetos</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,9 +14,9 @@
             Cadastros
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="{% url 'criar_equipes'%}">Equipes</a></li>
             <li><a class="dropdown-item" href="{% url 'cadastrar_membros' %}">Membros</a></li>
             <li><a class="dropdown-item" href="{% url 'criar_projetos'%}">Projetos</a></li>
-            <li><a class="dropdown-item" href="{% url 'criar_equipes'%}">Equipes</a></li>
             <li><a class="dropdown-item" href="{% url 'criar_tarefas'%}">Tarefas</a></li>
 
           </ul>
